fixes bg centering on mobile

--- a/css/new-age.css
+++ b/css/new-age.css
@@ -163,6 +163,8 @@ header.masthead{
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 75% 25%;
+  background-position: center;
+
 
 }
 
